Reintroduced option -counterexample to stop the analysis of EF or PRP as soon as a bad state is found

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1134,6 +1134,12 @@ Print the list of contributors and exits.
 
 
 %------------------------------------------------------------
+\paragraph{\styleOption{-counterexample}}
+%------------------------------------------------------------
+For algorithms \EFsynth{} and \PRP{}, stops the analysis as soon as one target state is found.
+
+
+%------------------------------------------------------------
 \paragraph{\styleOption{-depth-limit <limit>} (default: none)}
 %------------------------------------------------------------
 Limits the depth of the exploration of the state space.
