Cleanup the terminal output by IMITATOR; add new mode '-verbose experiments' to retrieve these data

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1579,7 +1579,8 @@ The admissible values for \styleOption{-verbose} are given below:
  \styleOption{mute} & No output (the result can be output to a file using \styleOption{-output-result}) \\
  \styleOption{warnings} & Prints only warnings \\
  \styleOption{standard} & Give little information (number of steps, computation time)\\
- \styleOption{low} & Give little additional information\\
+ \styleOption{experiments} & Give some additional information, typically enough for experiments\\
+ \styleOption{low} & Give some additional information on what happens internally\\
  \styleOption{medium} & Give quite a lot of information\\
  \styleOption{high} & Give much information\\
  \styleOption{total} & Give really too much information\\
