--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -324,14 +324,16 @@
 
 @inproceedings{ANPS17,
 	author = {Andr{\'e}, {\'E}tienne and Nguyen, Hoang Gia and Petrucci, Laure and Sun, Jun},
-	booktitle =		{Proceedings of the 9th {NASA} Formal Methods Symposium (NFM'17)},
+	booktitle =		{Proceedings of the 9th {NASA} Formal Methods Symposium ({NFM} 2017)},
+	doi       = {10.1007/978-3-319-57288-8_3},
 	editor = {Barrett, Clark and Kahsai, Temesghen},
 	location = {Moffett Field, CA, USA},
 	publisher = {Springer},
+	pages     = {35--51},
 	series    = {Lecture Notes in Computer Science},
 	title = {Parametric model checking timed automata under non-{Z}enoness assumption},
+	volume    = {10227},
 	year = {2017},
-	note = {To appear},
 	lipn-category = {intc},
 	keywords = {intc},
 }
