--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -65,7 +65,7 @@
 \fancyhead[r]{%
 	\includegraphics[height=1em]{../logos/imitator-500.png}
 	\includegraphics[height=1em]{../logos/logo2-300.png}
-	\includegraphics[height=1em]{../logos/logo2-9-300.png}
+	\includegraphics[height=1em]{../logos/logo2-10-300.png}
 }
 
 \renewcommand{\headrulewidth}{.1pt}
@@ -255,8 +255,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{2.9.1}
-\newcommand{\imitatorversionname}{Butter Incaberry}
+\newcommand{\imitatorversion}{2.10}
+\newcommand{\imitatorversionname}{Butter Jellyfish}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
