--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -30,3 +30,9 @@ The background erasing was done by Fabrice~Kordon.
 
 \url{https://commons.wikimedia.org/wiki/File:Physalis_peruviana.jpg}
  
+
+\paragraph{\imitator{}'s 2.10 version logo} comes from ``méduses tentacules'' by (?) on \url{pixabay.com}
+	(License: CC0).
+
+\url{https://pixabay.com/fr/m%C3%A9duse-tentacules-medusa-marine-154799/}
+ 
