Modify syntax in guards and invariants (former syntax remains backward compatible); switch to version 2.10.1

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2231,6 +2231,7 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{in},
 \styleIMI{init},
 \styleIMI{initially},
+\styleIMI{invariant},
 \styleIMI{loc},
 \styleIMI{locations},
 \styleIMI{maximize},
