--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -851,7 +851,7 @@ We do not give a formal grammar for this file (yet), but it can be easily inferr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The file header recalls the exact version of \imitator{} used to run the analysis, including the build number, the git branch and the git SHA hash.
-It also recalls the model name, the exact command used, and the time where the file was generated (which may slightly differ from the time the analysis was launched, if the analysis was significantly long).
+It also recalls the model name, the exact command used, and the time when the file was generated (which may slightly differ from the time the analysis was run, if the analysis was significantly long).
 
 Then, the header recalls global information on the model (number of \IPTA{}, of clocks, of parameters, whether the model contains stopwatches, etc.).
 
