Typo in user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1769,7 +1769,7 @@ We define each of those two components below.
 \end{tabular}
 
 %------------------------------------------------------------
-\regleGrammaire{locations}
+\regleGrammaire{location}
 %------------------------------------------------------------
 \begin{tabular}{l l}
 	\  & \styleIMI{loc} \styleIMI{<name>} \styleIMI{:} \styleIMI{invariant} \nt{convex\_predicate} \nt{stop\_opt} \npec{\nt{wait\_opt}} \nt{transitions} \\
