--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -244,6 +244,16 @@
 	year = {2016},
 }
 
+@inproceedings{ALR18PresetTA,
+	author = {Andr{\'e}, {\'E}tienne and Lime, Didier and Ramparison, Mathias},
+	title = {Timed automata with parametric updates},
+	booktitle = {{ACSD}},
+	note = {To appear},
+	year = {2018},
+	lipn-category = {intc},
+	keywords = {intc},
+}
+
 
 @inproceedings{AM02,
   	acronym =	{{TACAS}'02},
@@ -350,6 +360,20 @@
   	keywords = {book},
 }
 
+@article{BDFP04,
+  	author =	{Patricia Bouyer and
+               Catherine Dufourd and
+               Emmanuel Fleury and
+               Antoine Petit},
+  	journal =	{Theoretical Computer Science},
+  	month =	aug,
+  	number =	{2-3},
+  	pages =	{291-345},
+  	publisher =	{Elsevier Science Publishers},
+  	title =	{Updatable Timed Automata},
+  	volume =	{321},
+  	year =	{2004},
+}
 
 @article{BHZ08,
 	Author = {Roberto Bagnara and
