Fix and unify the options for state space generation

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1465,7 +1465,7 @@ Note that the path and the name of those two files can be changed using the \sty
 
 In the graphical output of the trace set (see option \styleOption{-output-trace-set}),
 does \emph{not} provide detailed information on the local locations of the composed \IPTA{}, and instead only outputs the state id.
-Enabling this option may yield a smaller graph, which is useful when generating large trace sets.
+Enabling this option instead of \styleOption{-output-trace-set} may yield a smaller graph, which is useful when generating large trace sets.
 
 
 %------------------------------------------------------------
@@ -1475,7 +1475,7 @@ Enabling this option may yield a smaller graph, which is useful when generating 
 In the graphical output of the trace set (see option \styleOption{-output-trace-set}),
 provides very detailed information, by adding to the right of the local locations of the composed \IPTA{} the associated constraint as well.
 In addition, the parametric constraint is printed too.
-Enabling this option will yield a very large graph, and it is useful (and readable) mostly for very small trace sets.
+Enabling this option instead of \styleOption{-output-trace-set} will yield a very large graph, and it is useful (and readable) mostly for very small trace sets.
 	% TODO: show examples in the manual
 
 
