Add ref to EFmin

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -590,6 +590,7 @@ Internally, this algorithm works exactly the same as the reachability-synthesis,
 
 This algorithm synthesizes the minimum valuation for a given parameter for which a given location is reachable.
 The property must be specified as for \EFsynth{} (see \cref{ss:mode:EFsynth}).
+This algorithm is briefly mentioned in~\cite{ABPV19}.
 
 In addition, the parameter to be minimized must be specified at the end of the model as follows:
 
