--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -42,6 +42,29 @@
 }
 
 
+
+@inproceedings{ABPV19,
+	author = {Andr{\'e}, {\'E}tienne and Bloemen, Vincent and Petrucci, Laure and van de Pol, Jaco},
+	title = {Minimal-Time Synthesis for Parametric Timed Automata},
+	longbooktitle = {Proceedings of the 25th International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2019)},
+	booktitle = {{TACAS}},
+	editor = {Vojnar, Tomas and Zhang, Lijun},
+	location = {Prague, Czech Repubic},
+	confdates = {8-11 April  2019},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	year = {2019},
+	lipn-category = {intc},
+	keywords = {intc},
+	lipn-status = {apar},
+	note = {To appear},
+}
+	doi = {10.1007/978-3-030-11245-5\_23},
+	pages = {491--512},
+	volume = {11388},
+
+	
+
 @inproceedings{ACE14,
 	author = {Andr{\'e}, {\'E}tienne and Coti, Camille and Evangelista, Sami},
 	title = {Distributed Behavioral Cartography of Timed Automata},
