--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -621,7 +621,7 @@ The standard command is:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \imitator{} basically only supports bad state reachability synthesis on the one hand, and algorithms such as the inverse method and the cartography on the other hand.
-However, many correctness properties can be encoded using reachability using \emph{observers} (see \cite{ABL98,ABBL98,Andre13ICECCS}).
+However, many correctness properties can be encoded using reachability using \emph{observers} (see \cite{ABL98,ABBL98,ABBL03,Andre13ICECCS}).
 
 Encoding observers can be done manually (using \adhoc{} \IPTA{}), or using predefined correctness properties commonly met in the literature.
 
@@ -2562,6 +2562,23 @@ This user manual is available under the Creative Commons CC-BY-SA license.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
+
+\newcommand{\CCIS}{Communications in Computer and Information Science}
+\newcommand{\ENTCS}{Electronic Notes in Theoretical Computer Science}
+\newcommand{\FI}{Fundamenta Informormaticae}
+\newcommand{\FMSD}{Formal Methods in System Design}
+\newcommand{\IJFCS}{International Journal of Foundations of Computer Science}
+\newcommand{\IJSSE}{International Journal of Secure Software Engineering}
+\newcommand{\JLAP}{Journal of Logic and Algebraic Programming}
+\newcommand{\JLC}{Journal of Logic and Computation}
+\newcommand{\LMCS}{Logical Methods in Computer Science}
+\newcommand{\LNCS}{Lecture Notes in Computer Science}
+\newcommand{\RESS}{Reliability Engineering \& System Safety}
+\newcommand{\STTT}{International Journal on Software Tools for Technology Transfer}
+\newcommand{\TCS}{Theoretical Computer Science}
+\newcommand{\ToPNoC}{Transactions on Petri Nets and Other Models of Concurrency}
+\newcommand{\TSE}{IEEE Transactions on Software Engineering}
+
 \bibliographystyle{alpha}
 \addcontentsline{toc}{chapter}{References}
 \bibliography{biblio}
