User manual: add credit for 2.11 logo

--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -35,4 +35,10 @@ The background erasing was done by Fabrice~Kordon.
 	(License: CC0).
 
 \url{https://pixabay.com/fr/m%C3%A9duse-tentacules-medusa-marine-154799/}
+
+\paragraph{\imitator{}'s 2.11 version logo} comes from ``Véritable Kouign Amann de Douarnenez '' by Haltopub on Wikimedia Commons
+	(License: public domain).
+
+\url{https://commons.wikimedia.org/wiki/File:Kouignamann.JPG}
+ 
  
