--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2524,11 +2524,13 @@ The following people contributed to the development of \imitator{}.
 
 \begin{tabular}{l l @{ } c @{ } l}
 	Étienne André & 2008 & -- & \\
+	Jaime Arias & 2018 & -- & \\
+	Vincent Bloemen & 2018 & & \\
 	Camille Coti & 2014 & & \\
 	Daphne Dussaud & 2010 & & \\
 	Sami Evangelista & 2014 & & \\
 	Ulrich Kühne & 2010 & -- & 2011 \\
-	Nguy\~{ê}n~Hoàng~Gia & 2014 & -- & \\
+	Nguy\~{ê}n~Hoàng~Gia & 2014 & -- & 2018 \\
 	Romain Soulat & 2010 & -- & 2013 \\
 \end{tabular}
 
@@ -2537,7 +2539,6 @@ The following people contributed to the development of \imitator{}.
 The following people contributed to the compiling, testing and packaging facilities.
 
 \begin{tabular}{l l @{ } c @{ } l}
-	Jaime Arias & 2018 & & \\
 	Corentin Guillevic & 2015 & & \\
 	Sarah Hadbi & 2015 & & \\
 	Fabrice Kordon & 2015 & & \\
